2-MISと3-MISの証明とりあえず書いた

--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -1,7 +1,7 @@
-\documentclass{thesis}
+\documentclass[12]{thesis}
 \bibliographystyle{unsrt}
 \input{jdummy.def} 				% フォント関連のエラー対策(らしい)
-\usepackage[dvipdfmx]{graphicx, color}
+\usepackage[dvipdfmx]{graphicx}
 \usepackage{amsmath}			% math系
 \usepackage{amssymb}			% math系
 %\usepackage{float}				% 図表の挿入箇所を固定する[H]指定
@@ -39,11 +39,13 @@
 \pagestyle{empty}
 
 % タイトル
-\gradyear{2020}
-\papertitle{$k$-極大独立集合検証問題の \\ 分散計算複雑性}
-\IDNumber{31414050}
-\department{情報工学専攻}
-\labo{片山・金研究室}
+%\gradyear{2020}
+\papertitleJP{$k$-極大独立集合検証問題の \\ 分散計算複雑性}
+\papertitleEN{Distributed Complexity of k-Maximal \\ Independent Set Verification}
+\studentID{31414050}
+\degree{master}
+\program{cs}
+\labo{片山・金}
 \enteryear{2019}
 \name{佐藤　僚祐}
 \maketitle
