フォントサイズ直した

--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -1,4 +1,4 @@
-\documentclass[12]{thesis}
+\documentclass[12pt]{thesis}
 \bibliographystyle{unsrt}
 \input{jdummy.def} 				% フォント関連のエラー対策(らしい)
 \usepackage[dvipdfmx]{graphicx}
