関連研究追加

--- a/MT/M2sato.bib
+++ b/MT/M2sato.bib
@@ -10,13 +10,11 @@
   journal={arXiv preprint arXiv:2003.07427},
   year={2020}
 }
-@inproceedings{ghaffari2013distributed,
-  title={Distributed minimum cut approximation},
-  author={Ghaffari, Mohsen and Kuhn, Fabian},
-  booktitle={International Symposium on Distributed Computing},
-  pages={1--15},
-  year={2013},
-  organization={Springer}
+@article{censor2017quadratic,
+  title={Quadratic and near-quadratic lower bounds for the CONGEST model},
+  author={Censor-Hillel, Keren and Khoury, Seri and Paz, Ami},
+  journal={arXiv preprint arXiv:1705.05646},
+  year={2017}
 }
 @inproceedings{fischer2018possibilities,
   title={Possibilities and impossibilities for distributed subgraph detection},
@@ -43,5 +41,15 @@
   number={4},
   pages={545--557},
   year={1992},
+  publisher={SIAM}
+}
+@article{sarma2012distributed,
+  title={Distributed verification and hardness of distributed approximation},
+  author={Sarma, Atish Das and Holzer, Stephan and Kor, Liah and Korman, Amos and Nanongkai, Danupon and Pandurangan, Gopal and Peleg, David and Wattenhofer, Roger},
+  journal={SIAM Journal on Computing},
+  volume={41},
+  number={5},
+  pages={1235--1265},
+  year={2012},
   publisher={SIAM}
 }
