1章修正した

--- a/MT/M2sato.bib
+++ b/MT/M2sato.bib
@@ -53,3 +53,13 @@
   year={2012},
   publisher={SIAM}
 }
+@article{haastad1999clique,
+  title={Clique is hard to approximate withinn 1- $\varepsilon$},
+  author={H{\aa}stad, Johan},
+  journal={Acta Mathematica},
+  volume={182},
+  number={1},
+  pages={105--142},
+  year={1999},
+  publisher={Springer}
+}
