--- a/MT/M2sato.bib
+++ b/MT/M2sato.bib
@@ -63,3 +63,20 @@
   year={1999},
   publisher={Springer}
 }
+@article{luby1986simple,
+  title={A simple parallel algorithm for the maximal independent set problem},
+  author={Luby, Michael},
+  journal={SIAM journal on computing},
+  volume={15},
+  number={4},
+  pages={1036--1053},
+  year={1986},
+  publisher={SIAM}
+}
+@article{kuhn2010local,
+  title={Local computation: Lower and upper bounds},
+  author={Kuhn, Fabian and Moscibroda, Thomas and Wattenhofer, Roger},
+  journal={arXiv preprint arXiv:1011.5470},
+  year={2010}
+}
+
